NH | fixing tile-grow on mobile

--- a/cna-stylesheet.css
+++ b/cna-stylesheet.css
@@ -321,6 +321,11 @@ table tr td {
     flex-wrap: wrap;
     margin-bottom: 30px;
 }
+.tile-grow .col-md-4 {
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-basis: 33.333333%;
+}
 .tile-grow div[class*="section"] > div {
     height: 100%;
     margin: 0;
